npm package declaration bug fix

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts --watch src",
     "test": "jest --watch",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test",
+    "preversion": "npm test",
+    "version": "npm run build && git add -A dist",
+    "postversion": "git push && git push --tags && rm -rf build/temp",
     "coverage": "jest --coverage"
   },
   "repository": {
@@ -16,7 +21,7 @@
     "url": "git+https://github.com/pankod/typescript-enum-helper.git"
   },
   "author": "Pankod Inc.",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/pankod/typescript-enum-helper/issues"
   },
