--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "preversion": "npm test",
     "coverage": "jest --coverage"
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pankod/typescript-enum-helper.git"
